--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -1,26 +1,25 @@
-:host{
-   display: flex;
-   flex-direction: column;
-   margin: 0 var(--base-separation)
+:host {
+  display: flex;
+  flex-direction: column;
+  margin: 0 var(--base-separation);
 }
 
 h1 {
-  margin-top: var(--double-separation);
+  margin-top: calc(var(--double-separation) * 1.5);
   margin-bottom: var(--double-separation);
   text-align: center;
   font-size: 3rem;
 }
 
-
 .remove-all {
   margin-top: var(--double-separation);
-  background:none;
-  border:none;
+  background: none;
+  border: none;
   text-align: center;
   font-size: 0.975rem;
   color: #7e7e7e;
 
   &:hover {
-    color:#7c2222;
+    color: #7c2222;
   }
 }
