added selectedTodo in TodosState

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -7,7 +7,7 @@
   (reopened)="markAsPending(todo)"
   (completed)="markAsCompleted(todo)"
   (click)="selectTodo(todo)"
-  [class.selected]=""
+  [class.selected]="todo === (selectedTodo$ | async)"
 ></ako-todo>
 
 <button
